<resources>
    <string name="app_name">Locador2</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_locator_home">LocatorHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_payement">Payement</string>
    <string name="menu_edit_parking">Edit parking </string>
    <string name="menu_history">History</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_require">Location permission require</string>

</resources>
